--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-i18next": "^12.2.0",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.9.0",
+    "redux": "^4.2.1",
+    "redux-devtools-extension": "^2.13.9",
     "sass": "^1.60.0"
   },
   "devDependencies": {
