--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.4.0",
     "classnames": "^2.3.2",
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
