--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "dependencies": {
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "formik": "^2.2.9",
     "framer-motion": "^10.12.7",
     "i18next": "^22.4.14",
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
     "react-dom": "^18.2.0",
@@ -24,10 +26,12 @@
     "react-router-dom": "^6.9.0",
     "redux": "^4.2.1",
     "redux-devtools-extension": "^2.13.9",
-    "sass": "^1.60.0"
+    "sass": "^1.60.0",
+    "yup": "^1.1.1"
   },
   "devDependencies": {
     "@faker-js/faker": "^7.6.0",
+    "@types/js-cookie": "^3.0.3",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "@vitejs/plugin-react": "^3.1.0",
