--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,10 @@ dist-ssr
 *.local
 
 # Editor directories and files
-.vscode/*
+/backend/obj
+/backend/bin
+**/.vscode
+**/.vs
 !.vscode/extensions.json
 .idea
 .DS_Store
