--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -16,4 +16,8 @@
     <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.30.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Compile Remove="Controllers\LevelController.cs" />
+  </ItemGroup>
+
 </Project>
