--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,6 +26,8 @@
             "runtimeArgs": [
                 "run",
                 "dev",
+                "--",
+                "--host",
             ]
         },
     ],
