--- a/backend/backend.csproj
+++ b/backend/backend.csproj
@@ -18,6 +18,7 @@
 
   <ItemGroup>
     <Compile Remove="Controllers\LevelController.cs" />
+    <Compile Remove="Repositories\IRussinaWordsRepository.cs" />
   </ItemGroup>
 
 </Project>
