Изменения для сервера

--- a/backend/appsettings.json
+++ b/backend/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "MongoDbSetting":{
-    "Host":"localhost",
+    "Host":"db",
     "Port": "27017"
   },
   "Jwt": {
