--- a/frontend/.env
+++ b/frontend/.env
@@ -1,3 +1,3 @@
 APP_BACKEND_NAME=ultratype_backend
 APP_FRONTEND_NAME=ultratype_frontend
-VITE_API_URL=/api/
+VITE_API_URL="https://ultratype.cc/api/"
