--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     build:
       context: ./
       dockerfile: Dockerfile
-    container_name: ${APP_FRONTEND_NAME}-app
+    container_name: ${APP_NAME}-app
     restart: always
     tty: true
     working_dir: /var/www/
