--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "i18next-browser-languagedetector": "^7.0.1",
     "i18next-http-backend": "^2.2.0",
     "js-cookie": "^3.0.5",
+    "rc-input-number": "^7.4.2",
     "react": "^18.2.0",
     "react-auth-kit": "^2.12.2",
     "react-dom": "^18.2.0",
