--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -21,6 +21,7 @@ services:
   db:
     image: mongo
     container_name: ${APP_NAME}-db
+    command: [--auth]
     volumes:
       - /var/www/ultratype/backend/src/dbdata:/data/db
     ports:
