--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -4,18 +4,29 @@ events {
 http {
     server {
         listen 80;
-        access_log off;
-        server_name localhost;
+        server_name             localhost;
+        listen                  443 ssl;
+        listen                  [::]:443 ssl;
+        ssl_certificate         /root/ssl/cert.pem;
+        ssl_certificate_key     /root/ssl/key.pem;
+
 
         location / {
             proxy_pass http://frontend:5000;
-            # proxy_set_header X-Real-IP $remote_addr;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
         }
 
         location /api/ {
             proxy_pass http://backend:8081/;
-            # proxy_set_header Host $host;
-            # proxy_set_header X-Real-IP $remote_addr;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection "upgrade";
+            proxy_set_header Host $host;
         }
+
+        location ~ /.well-known/acme-challenge/ { root /var/www/certbot; }
     }
 }
