--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,14 +1,19 @@
 events {
 
 }
+
 http {
     server {
         listen 80;
-        server_name             localhost;
-        listen                  443 ssl;
-        listen                  [::]:443 ssl;
-        ssl_certificate         /root/ssl/cert.pem;
-        ssl_certificate_key     /root/ssl/key.pem;
+        listen 443 ssl;
+        server_name             ultratype.ru www.ultratype.ru;
+
+        ssl_certificate         /etc/letsencrypt/live/ultratype.ru/fullchain.pem;
+        ssl_certificate_key     /etc/letsencrypt/live/ultratype.ru/privkey.pem;
+
+        if ($server_port = 80) { set $https_redirect 1; }
+        if ($host ~ '^www\.') { set $https_redirect 1; }
+        if ($https_redirect = 1) { return 301 https://ultratype.ru$request_uri; }
 
 
         location / {
@@ -21,10 +26,6 @@ http {
 
         location /api/ {
             proxy_pass http://backend:8081/;
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
         }
 
         location ~ /.well-known/acme-challenge/ { root /var/www/certbot; }
