--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,8 @@ services:
       context: ./frontend
     restart: on-failure
     tty: true
-    command: yarn dev --host 0.0.0.0 --port 5000
-    ports:
-      - 3001:3000 #Production port
-      - 5000:5000 #Development port
+    command: yarn preview --host 0.0.0.0 --port 5000
+    ports: [5000]
     environment:
       - NODE_ENV=production
 
@@ -15,10 +13,10 @@ services:
     build:
       context: ./backend
     command: dotnet backend.dll
-    ports:
-      - "8081:8081"
+    restart: always
+    ports: [8081]
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
+      - ASPNETCORE_ENVIRONMENT=Production
       - ASPNETCORE_URLS=http://+:8081
     depends_on:
       - db
@@ -29,6 +27,7 @@ services:
       - dbdata6:/data/db
 
   nginx:
+    restart: always
     image: nginx:latest
     ports:
       - 80:80
@@ -37,14 +36,19 @@ services:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
       - ./certbot/conf:/etc/letsencrypt
       - ./certbot/www:/var/www/certbot
+    depends_on:
+      - frontend
+      - backend
 
-  certbot:
-    container_name: certbot
-    image: certbot/certbot
-    volumes:
-      - ./data/certbot/conf:/etc/letsencrypt
-      - ./data/certbot/www:/var/www/certbot
-    command: certonly --webroot -w /var/www/certbot --force-renewal --email poseaydone@ya.ru -d ultratype.ru --agree-tos
+        # certbot:
+        #   image: certbot/certbot
+        #   container_name: certbot
+        #   volumes:
+        #     - ./certbot/conf:/etc/letsencrypt
+        #     - ./certbot/www:/var/www/certbot
+        #   command: certonly --webroot -w /var/www/certbot --force-renewal --email poseaydone@ya.ru -d ultratype.ru --agree-tos
+        #   depends_on:
+        #     - nginx
 
 volumes:
   dbdata6:
