--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,23 +3,23 @@ services:
     build:
       context: ./frontend
     restart: on-failure
-    tty: true
-    command: yarn dev --host 0.0.0.0 --port 5000
     ports:
-      - 3001:3000 #Production port
-      - 5000:5000 #Development port
+      - 5000:5000
+    depends_on:
+      - backend
     environment:
       - NODE_ENV=production
+      - BODY_SIZE_LIMIT=Infinity
 
   backend:
     build:
       context: ./backend
     command: dotnet backend.dll
     ports:
-      - "8081:8081"
+      - 9000:9000
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
-      - ASPNETCORE_URLS=http://+:8081
+      - ASPNETCORE_URLS=http://+:9000
     depends_on:
       - db
 
@@ -28,14 +28,6 @@ services:
     volumes:
       - dbdata6:/data/db
 
-  nginx:
-    build:
-      context: ./nginx
-    ports:
-      - 80:80
-    depends_on:
-      - backend
-      - frontend
 
 volumes:
   dbdata6:
